cmake_minimum_required(VERSION 3.22)
project(objc_practice)
set(CMAKE_CXX_STANDARD 17)
find_package(Theads REQUIRED)
set(CMAKE_C_FLAGS "-x objective-c")
set(CMAKE_CXX_FLAGS "-x objective-c++")
set(CMAKE_EXE_LINKER_FLAGS "-framework Cocoa -framework AppKit -framework CoreData -     framework Foundation")
